[gd_scene load_steps=3 format=3 uid="uid://customization_screen_uid"]

[ext_resource type="Script" uid="uid://customization_script" path="res://scripts/customization_screen.gd" id="1_custom"]
[ext_resource type="PackedScene" uid="uid://modular_blade_uid" path="res://scenes/ModularBlade.tscn" id="2_blade"]

[node name="CustomizationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_custom")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 400.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Blade Customization"
horizontal_alignment = 1

[node name="RingSelector" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MetalSelector" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TipSelector" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SpawnButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SPAWN BLADE"

[node name="PreviewContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -700.0
grow_horizontal = 0
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PreviewContainer"]
handle_input_locally = false
size = Vector2i(700, 648)
render_target_update_mode = 4

[node name="PreviewWorld" type="Node3D" parent="PreviewContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="PreviewContainer/SubViewport/PreviewWorld"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.5, 2.5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PreviewContainer/SubViewport/PreviewWorld"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)

[node name="BladePivot" type="Node3D" parent="PreviewContainer/SubViewport/PreviewWorld"]

[node name="ModularBlade" parent="PreviewContainer/SubViewport/PreviewWorld/BladePivot" instance=ExtResource("2_blade")]
collision_layer = 0
collision_mask = 0
freeze = true
